ORM: refine RepositoryBase